# drake

./: .gitignore  WORKSPACE  drake.code-workspace
common/: drake_path.cc  drake_path.h
examples/acrobot/: BUILD.bazel  acrobot_geometry.cc  acrobot_plant.cc  run_lqr.cc  run_passive.cc  run_plant_w_lcm.cc  spong_sim.cc
examples/hello/: BUILD.bazel  hello.cc
examples/kuka_iiwa_arm/: kuka_simulation.cc
examples/multibody/acrobot/: BUILD.bazel  fb_cancellation_controller.h  passive_simulation.cc  run_fb_cancellation.cc
examples/planar_gripper/: planar_gripper_simulation.cc
multibody/benchmarks/acrobot/: acrobot.sdf  double_pendulum_underactuated.sdf
note/: BUILD.bazel  acrobot.py  interactive_ik_gradient_descent.ipynb  kuka_direct_collocation.ipynb  kuka_direct_transcription.ipynb  kuka_ik_gradient_descent.ipynb  kuka_kinematic_trajopt.ipynb  mpc.ipynb  note.md  pendulum_mpc.ipynb  root_finding.ipynb  rrt.cc  testcol.ipynb  trajopt_basics.ipynb
note/cpp/: direct_transcription_kuka.cc
tutorials/: quadratic_program.ipynb
