load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)

package(default_visibility = ["//visibility:private"])

drake_cc_binary(
    name = "passive_simulation",
    srcs = ["passive_simulation.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0.0",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//lcm",
        "//multibody/benchmarks/acrobot:make_acrobot_plant",
        "//systems/analysis:implicit_euler_integrator",
        "//systems/analysis:runge_kutta3_integrator",
        "//systems/analysis:semi_explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_lqr",
    srcs = ["run_lqr.cc"],
    add_test_rule = 1,
    data = ["//multibody/benchmarks/acrobot:models"],
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0.0",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//lcm",
        "//multibody/benchmarks/acrobot:make_acrobot_plant",
        "//multibody/parsing",
        "//systems/analysis:simulator",
        "//systems/controllers:linear_quadratic_regulator",
        "//systems/framework:diagram",
        "//systems/primitives:affine_system",
        "//visualization:visualization_config_functions",
        "@gflags",
    ],
)

drake_cc_library(
    name = "fb_cancellation_controller",
    hdrs = ["fb_cancellation_controller.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//common:default_scalars",
        "//math:wrap_to",
        "//systems/controllers:linear_quadratic_regulator",
        "//systems/framework:leaf_system",
        "//systems/framework:vector",
        "//systems/primitives:linear_system",
    ],
    # copts = ["-Wno-unused-variable", "-Wno-unused-parameter"], 
    # if you want to pass to the command line:
    # bazel build --copt="-Wno-unused-parameter" //examples/multibody/acrobot:run_fb_cancellation
)

drake_cc_binary(
    name = "run_fb_cancellation",
    srcs = ["run_fb_cancellation.cc"],
    # data = ["//drake/underactuated/models/**"],
    deps = [
        ":fb_cancellation_controller",
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//lcm",
        "//multibody/parsing",
        "//multibody/benchmarks/acrobot:make_acrobot_plant",
        "//systems/analysis:implicit_euler_integrator",
        "//systems/analysis:runge_kutta3_integrator",
        "//systems/analysis:semi_explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//visualization:visualization_config_functions",
        "@gflags",
    ],
)

add_lint_tests(enable_clang_format_lint = False)
